// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Category {
  id    Int    @id @default(autoincrement())
  color String
  name  String
  lines Line[]
}

model Line {
  id             Int      @id @default(autoincrement())
  color          String?
  name           String
  category       Category @relation(fields: [categoryId], references: [id])
  categoryId     Int
  stops          Stop[]
  firstDeparture String // HH:mm formatted
  lastDeparture  String // HH:mm formatted
  createdAt      DateTime @default(now())
}

model Stop {
  id        Int      @id @default(autoincrement())
  name      String
  order     Int
  lineId    Int
  Line      Line     @relation(fields: [lineId], references: [id])
  lat       Float
  long      Float
  createdAt DateTime @default(now())
}

model User {
  id        Int      @id @default(autoincrement())
  name      String
  email     String
  password  String
  createdAt DateTime @default(now())
}
